Fixed corner radius of media-card-overlay (was 1px too large)

--- a/MP2Web/ClientApp/src/app/shared/styles/media.styles.css
+++ b/MP2Web/ClientApp/src/app/shared/styles/media.styles.css
@@ -66,8 +66,8 @@
   background-color: var(--primary-background-alpha);
   font-family: 'Open Sans', sans-serif;
   color: var(--primary-text-color);
-  border-bottom-right-radius: 4px;
-  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 3px;
+  border-bottom-left-radius: 3px;
 }
 
 /*
